# src/models/comment.model.js
@@ -1,0 +1,29 @@
+import { DataTypes } from "sequelize";
+
+//新建 comment 的数据库模型
+export function defineCommentModel(sequelize, User, Post) {
+  const Comment = sequelize.define(
+    "Comment",
+    {
+      content: {
+        type: DataTypes.TEXT,
+        allowNull: false,
+        comment: "评论正文",
+      },
+    },
+    {
+      indexes: [{ fields: ["postId"] }, { fields: ["authorId"] }, { fields: ["parentId"] }],
+    },
+  );
+
+  Comment.belongsTo(Post, { foreignKey: "postId", as: "post", onDelete: "CASCADE" });
+  Post.hasMany(Comment, { foreignKey: "postId", as: "comments" });
+
+  Comment.belongsTo(User, { foreignKey: "authorId", as: "author" });
+  User.hasMany(Comment, { foreignKey: "authorId", as: "comments" });
+
+  Comment.belongsTo(Comment, { foreignKey: "parentId", as: "parent" });
+  Comment.hasMany(Comment, { foreignKey: "parentId", as: "replies" });
+
+  return Comment;
+}
